# Personal_Assistant_DjangoApp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
per_assist/: .example.env  Procfile  docker-compose.yml  manage.py  requirements.txt
per_assist/contacts/: forms.py  models.py  tests.py  urls.py  views.py
per_assist/contacts/manager/: contact_manager.py
per_assist/contacts/migrations/: 0001_initial.py  0002_contact_address.py  0002_remove_contact_user_id_contact_address_contact_user.py  0003_remove_contact_additional.py  0003_remove_contact_user_id.py  0004_alter_contact_phone.py  0004_contact_additional_info_contact_additional_phone_and_more.py  0004_contact_user.py
per_assist/contacts/templates/: 404.html
per_assist/exchange_rates/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
per_assist/exchange_rates/abstract_classes/: abstract_format.py  request_data.py
per_assist/exchange_rates/classes/: Client.py  Json_format.py  Request_rates.py
per_assist/files/: forms.py  models.py  tests.py  urls.py  views.py
per_assist/forecast/: admin.py  models.py  urls.py  views.py
per_assist/notes/: forms.py  models.py  tests.py  urls.py  views.py
per_assist/per_assist/: asgi.py  settings copy.py  settings.py  urls.py  wsgi.py
per_assist/the_news/: context_processors.py  models.py  tests.py  urls.py  views.py
per_assist/users/: forms.py  views.py
per_assist/utils/: shared_functions.py
per_assist/weather/: admin.py  form.py  forms.py  models.py  scrapy.py  scrapyapp.py  urls.py  views.py  weather.json
(+52 files in other folders)
