[tool.poetry]
name = "personal-assistant-djangoapp"
version = "0.1.0"
description = ""
authors = ["Vlad <vladyslav.pasko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"
django-storages = "^1.14.3"
boto3 = "^1.34.108"
scrapy = "^2.11.2"
requests = "^2.32.2"
django-phonenumber-field = "^7.3.0"
phonenumbers = "^8.13.37"
whitenoise = "^6.6.0"
uvicorn = "^0.30.0"
gunicorn = "^22.0.0"
dj-database-url = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
